# eva-mcp

./: .coverage  .eva-housekeeping.json  .eva-manifest.json  .eva-memory.json  .eva-pod.yaml  .gitignore  PHASE1-EVIDENCE.md  PHASE2-EVIDENCE.md  README.md  TEST_FAILURE_ANALYSIS.md  package-lock.json  package.json  pyproject.toml  test-phase1.ps1
.eva/: .eva-memory.schema.json  .eva-workspace.schema.json
.github/: copilot-instructions.md
.github/workflows/: memory-validation.yml  quality-gate.yml
backups/mandatory-folder-cleanup/20251216-220457/: provenance-manifest.json
backups/mandatory-folder-cleanup/20251216-220457/files/: .env.example
docs/: SPECIFICATION.md
src/: server.ts
src/__tests__/: jsonrpc-bad-length.test.ts  jsonrpc-framing.test.ts  registry.test.ts  resources-listing.test.ts  resources-prompts.test.ts  sandbox.test.ts  server-core.test.ts  server-errors.test.ts  server-shutdown-loop.test.ts
src/eva_mcp/: __init__.py  config.py  server.py
src/eva_mcp/auth/: __init__.py  oauth.py  rbac.py
src/eva_mcp/tools/: __init__.py  azure_resource_list.py  base.py  cosmos_db_query.py  git_status.py  registry.py
src/protocol/: types.ts
src/runtime/: prompts.ts  registry.ts  resources.ts  tools.ts
src/util/: jsonrpc.ts  sandbox.ts
tests/: __init__.py  test_base_tool.py  test_oauth.py  test_rbac.py  test_registry.py  test_server.py  test_tools.py
